Fixed the stiky scrollbar

--- a/index.css
+++ b/index.css
@@ -22,12 +22,13 @@ body {
   -moz-text-size-adjust: none;
   -ms-text-size-adjust: none;
   text-size-adjust: none;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .main {
   background-color: #c5bdb4;
   position: relative;
+  overflow: hidden;
 }
 
 .no-copy {
